--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,7 +10,7 @@
     <h2>Welcome {{user.name}}</h2>
     <div>
         <div>
-            <a href="/all-policies">
+            <a href="/all-polices">
                 <i class="fa-regular fa-folder-open"></i>
                 <p>All Policies</p>
             </a>
