Adding a single repository

--- a/templates/policy.html
+++ b/templates/policy.html
@@ -19,7 +19,9 @@
             <p>R{{item.item_price}}</p>
             {% endfor %}
         </div>
-        
+        <form action="" method="POST">
+            <button type="submit">Delete</button>
+        </form>
     </div>
 </body>
 </html>
