--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
       .nav-tag:hover {
         color: blue;
       }
-      input[type='checkbox'] {
+      input[type="checkbox"] {
         display: none;
       }
       #nav-checked:checked ~ .nav-items {
