--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <h2>Welcome {{user.name}}</h2>
     <div>
-        <div>
-            <a href="/all-polices">
-                <i class="fa-regular fa-folder-open"></i>
-                <p>All Policies</p>
-            </a>
-            <a href="/quote">
-                <i class="fa-solid fa-file-signature"></i>
-                <p>New Quote</p>
-            </a>
-            <a href="/all-quotes">
-                <i class="fa-solid fa-file-contract"></i>
-                <p>All Quotes</p>
-            </a>
-            <a href="/claim">
-                <i class="fa-solid fa-file-contract"></i>
-                <p>New Claim</p>
-            </a>
-            <a href="/all-claims">
-                <i class="fa-solid fa-file-contract"></i>
-                <p>All Claims</p>
-            </a>
-        </div>
+      <div>
+        <a href="/all-polices">
+          <i class="fa-regular fa-folder-open"></i>
+          <p>All Policies</p>
+        </a>
+        <a href="/quote">
+          <i class="fa-solid fa-file-signature"></i>
+          <p>New Quote</p>
+        </a>
+        <a href="/all-quotes">
+          <i class="fa-solid fa-file-contract"></i>
+          <p>All Quotes</p>
+        </a>
+        <a href="/claim">
+          <i class="fa-solid fa-file-contract"></i>
+          <p>New Claim</p>
+        </a>
+        <a href="/all-claims">
+          <i class="fa-solid fa-file-contract"></i>
+          <p>All Claims</p>
+        </a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
