--- a/templates/policy.html
+++ b/templates/policy.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
+
 <body>
     <div>
         <h3>Policy No: {{policy.id}}</h3>
@@ -24,4 +26,5 @@
         </form>
     </div>
 </body>
+
 </html>
