--- a/templates/login.html
+++ b/templates/login.html
@@ -1,35 +1,23 @@
-<!-- {% extends 'base.html' %} 
-{% block body%} -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div>
-    <h2>Login</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+
+  <body>
+    <h1>Login</h1>
     <form action="" method="POST">
-      {% if form.username.errors %}
-          {% for error in form.username.errors %}
-          <div style="color:red">{{error}}</div>
-          {% endfor %}
-          {% endif %}
-  
-          {% if form.password.errors %}
-          {% for error in form.password.errors %}
-          <div style="color:red">{{error}}</div>
-          {% endfor %}
-          {% endif %}
-      {{form.username.label}}: {{form.username()}}
-      {{form.password.label}}: {{form.password()}}
-      {{form.submit}}
+      {% if form.user_id.errors %} {% for error in form.user_id.errors %}
+      <div style="color: red">{{error}}</div>
+      {% endfor %} {% endif %} {% if form.password.errors %} {% for error in
+      form.password.errors %}
+      <div style="color: red">{{error}}</div>
+      {% endfor %} {% endif %} {{form.user_id.label}}:
+      {{form.user_id(placeholder="username")}} <br />
+      {{form.password.label}}: {{form.password()}} <br />
+      {{form.submit}}<br />
     </form>
-  </div>
-  
-</body>
+  </body>
 </html>
-
-
-<!-- {% endblock %} -->
