Adding GUI info

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %} {% block body%}
 
 <h1>Contact</h1>
+<ul>
+  <li>021 947 9111 Ext: 001</li>
+  <li>Email us: info@SanlamPlatinumPlus.co.za</li>
+  <li>Sanlam Head Office – Platinum Plus</li>
+  <li>C/O; Sanlam Platiunum Plus 2 Strand Road, Bellville</li>
+</ul>
 
 {% endblock %}
