--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %} {% block body%}
 
 <h1>Hello World</h1>
+<p>
+  Definition of Luxury Item: A luxury item is not necessary to live, but it is
+  deemed highly desirable within a culture or society. It tends to be sensitive
+  to a person's income or wealth, meaning that as wealth rises, so do purchases
+  of luxury items. Luxury items can include high-end automobiles and yachts but
+  also services, such as full-time or live-in chefs and housekeepers.
+</p>
+
+<p>
+  A luxury item insurance policy may cover high-value items like jewelry, art,
+  or electronics. Luxury items are considered elite in a particular society and
+  are typically high-quality, rare, and require more resources to produce than
+  non-luxury items. Examples of luxury items include:
+</p>
 
 {% endblock %}
