login and register fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
       .nav-tag:hover {
         color: blue;
       }
-      input[type="checkbox"] {
+      input[type='checkbox'] {
         display: none;
       }
       #nav-checked:checked ~ .nav-items {
@@ -114,7 +114,7 @@
       </ul>
       <div>
         <button>
-          <a href="/register">Register</a>
+          <a href="/registration">Register</a>
         </button>
         <button>
           <a href="/login">Login</a>
