--- a/templates/login.html
+++ b/templates/login.html
@@ -9,16 +9,16 @@
   <body>
     <h1>Login</h1>
     <form action="" method="POST">
-      {{ form.hidden_tag() }} {% if form.lg_user_id.errors %} {% for error in
-      form.lg_user_id.errors %}
+      {{ form.hidden_tag() }} {% if form.ID.errors %} {% for error in
+      form.ID.errors %}
       <div style="color: red">{{error}}</div>
-      {% endfor %} {% endif %} {% if form.lg_password.errors %} {% for error in
-      form.lg_password.errors %}
+      {% endfor %} {% endif %} {% if form.password.errors %} {% for error in
+      form.password.errors %}
       <div style="color: red">{{error}}</div>
-      {% endfor %} {% endif %} {{form.lg_user_id.label}}:
-      {{form.lg_user_id(placeholder="username")}} <br />
-      {{form.lg_password.label}}: {{form.lg_password()}} <br />
-      {{form.loggin}}<br />
+      {% endfor %} {% endif %} {{form.ID.label}}:
+      {{form.ID(placeholder="username")}} <br />
+      {{form.password.label}}: {{form.password()}} <br />
+      {{form.submit}}<br />
     </form>
   </body>
 </html>
