get a new quote

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,11 +20,11 @@
           <i class="fa-regular fa-folder-open"></i>
           <p>All Policies</p>
         </a>
-        <a href="/quote">
+        <a href="/quote/classic-cars">
           <i class="fa-solid fa-file-signature"></i>
-          <p>New Quote</p>
+          <p>Classic Cars Quote</p>
         </a>
-        <a href="/all-quotes">
+        <a href="/quote/all-quotes">
           <i class="fa-solid fa-file-contract"></i>
           <p>All Quotes</p>
         </a>
