All quotes functions

--- a/templates/all-quotes.html
+++ b/templates/all-quotes.html
@@ -14,7 +14,7 @@
     <p>{{classic_car.vehicle_make}}</p>
     <p>{{classic_car.model}}</p>
     <p>{{"R{:,.2f}".format(quote.quoted_premium).replace(',',' ')}} p/Month</p>
-    <a href="/all-quotes/{{quote.quote_id}}">View more</a>
+    <a href="/quote/all-quotes/{{quote.quote_id}}">View more</a>
     {% endfor %}
   </body>
 </html>
