--- a/templates/quote.html
+++ b/templates/quote.html
@@ -15,9 +15,9 @@
     <p>Model: {{item.model}}</p>
     <p>Model Year: {{item.year_model}}</p>
     <p>Vin: {{item.vin}}</p>
-    <p>license_plate_number: {{item.license_plate_number}}</p>
+    <p>License plate number: {{item.license_plate_number}}</p>
     <p>Odometer Reading: {{item.odometer_reading}}</p>
-    <p>fuel type: {{item.fuel_type}}</p>
+    <p>Fuel type: {{item.fuel_type}}</p>
     <p>Color: {{item.color}}</p>
     <p>Vehicle value: {{item.current_value}}</p>
     <p>Year purchased: {{item.year_purchased}}</p>
