move Policy to blueprint

--- a/templates/all-polices.html
+++ b/templates/all-polices.html
@@ -62,7 +62,7 @@
         <p>Make: {{classic_car.vehicle_make}}</p>
         <p>Model: {{classic_car.model}}</p>
         <p>Premium: R{{policy.monthly_premium}} p/m</p>
-        <a href="/all-polices/{{policy.policy_number}}">View More</a>
+        <a href="/all-policies/{{policy.policy_number}}">View More</a>
       </div>
       {% endfor %}
     </div>
