--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,7 +16,7 @@
     <h2>Welcome {{user.name}}</h2>
     <div>
       <div>
-        <a href="/all-polices">
+        <a href="/all-policies/">
           <i class="fa-regular fa-folder-open"></i>
           <p>All Policies</p>
         </a>
