Update email and contact number

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -36,6 +36,10 @@
           <i class="fa-solid fa-file-contract"></i>
           <p>All Claims</p>
         </a>
+        <a href="/account">
+          <i class="fa-solid fa-circle-user"></i>
+          <p>Account</p>
+        </a>
       </div>
     </div>
   </body>
