--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
           <i class="fa-solid fa-file-contract"></i>
           <p>All Quotes</p>
         </a>
-        <a href="/claim">
+        <a href="/new-claim">
           <i class="fa-solid fa-file-contract"></i>
           <p>New Claim</p>
         </a>
