--- a/templates/new-claim.html
+++ b/templates/new-claim.html
@@ -8,22 +8,20 @@
   <body>
     <h1>New Claim</h1>
     <form action="" method="POST">
-        <div>
-            <p>Select Policy number:</p>
-            <select name="policy_number">
-              {% for policy, classic_cars in polices%}
-              <option value="{{policy.policy_number}}">
-                {{policy.policy_number}} | {{classic_cars.vehicle_make}}
-              </option>
-              {% endfor %}
-              </select>
-        </div>
-        {{ form.hidden_tag() }}
-        {{form.date_incident_occurred.label}} {{form.date_incident_occurred()}}
-        {{form.claim_description.label}} {{form.claim_description()}}
-        {{form.police_claim_number.label}} {{form.police_claim_number()}}
-        {{form.submit()}}
-      </select>
+      <div>
+        <p>Select Policy number:</p>
+        <select name="policy_number">
+          {% for policy, classic_cars in polices%}
+          <option value="{{policy.policy_number}}">
+            {{policy.policy_number}} | {{classic_cars.vehicle_make}}
+          </option>
+          {% endfor %}
+        </select>
+      </div>
+      {{ form.hidden_tag() }} {{form.date_incident_occurred.label}}
+      {{form.date_incident_occurred()}} {{form.claim_description.label}}
+      {{form.claim_description()}} {{form.police_claim_number.label}}
+      {{form.police_claim_number()}} {{form.submit()}}
     </form>
   </body>
 </html>
