--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         font-family: Arial, sans-serif;
       }
       .nav-bar {
-        background-color: #333;
+        background-color: #0076be;
         color: #fff;
         padding: 10px;
         display: flex;
@@ -30,10 +30,10 @@
       }
       .nav-tag {
         text-decoration: none;
-        color: #fff;
+        color: #ffffff;
       }
       .nav-tag:hover {
-        color: blue;
+        color: #111820;
       }
       input[type='checkbox'] {
         display: none;
@@ -45,7 +45,10 @@
         display: none;
       }
       .active {
-        color: aqua;
+        color: #111820;
+      }
+      .button {
+        background: #333e48;
       }
 
       .logo {
@@ -113,11 +116,11 @@
         </li>
       </ul>
       <div>
-        <button>
-          <a href="/registration">Register</a>
+        <button class="button">
+          <a class="nav-tag" href="/registration">Register</a>
         </button>
-        <button>
-          <a href="/login">Login</a>
+        <button class="button">
+          <a class="nav-tag" href="/login">Login</a>
         </button>
       </div>
     </nav>
