--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,15 +11,38 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <style>
+      .body {
+        background-color: #ffffff;
+      }
+      .card {
+        background-color: #333e48;
+      }
+      .heading {
+        color: #ffffff;
+      }
+      .dashboard-button {
+        max-width: fit-content;
+        background-color: #ffffff;
+      }
+    </style>
   </head>
   <body>
-    <h2>Welcome {{user.name}}</h2>
-    <div>
-      <div>
-        <a href="/all-policies/">
-          <i class="fa-regular fa-folder-open"></i>
-          <p>All Policies</p>
-        </a>
+    <div class="card">
+      <h2 class="heading">Welcome {{user.name}} {{user.surname}}</h2>
+      <div class="card-body">
+        <div class="dashboard-button">
+          <a href="/all-policies/">
+            <i class="fa-regular fa-folder-open"></i>
+            <p>All Policies</p>
+          </a>
+        </div>
         <a href="/quote/classic-cars">
           <i class="fa-solid fa-file-signature"></i>
           <p>Classic Cars Quote</p>
@@ -42,5 +65,10 @@
         </a>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
