--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -48,6 +48,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
       }
       .dashboard-buttons-group {
         display: flex;
@@ -66,6 +67,7 @@
       }
       .dashboard-button:hover {
         background-color: #0076be;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
       }
       .dashboard-button-item {
         text-decoration: none;
