--- a/templates/all-claims.html
+++ b/templates/all-claims.html
@@ -4,17 +4,123 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
+    <style>
+      .nav-tag {
+        color: #ffffff;
+      }
+      .nav-tag:hover {
+        color: #111820;
+      }
+
+      .nav {
+        background-color: #0076be;
+      }
+      .nav-account {
+        color: #ffffff;
+        width: 20px;
+      }
+      .nav-account:hover {
+        color: #111820;
+      }
+
+      .all-category-heading {
+        margin-left: 15px;
+      }
+
+      .all-heading {
+        margin-left: 15px;
+        margin-top: 20px;
+      }
+
+      .all-items-container {
+        padding: 10px;
+        margin: 17px;
+      }
+      .policy-container {
+        background-color: #333e48;
+        color: #ffffff;
+      }
+      .all-button-active {
+        max-width: 150px;
+        background-color: #111820;
+        color: #ffffff;
+      }
+      .all-button {
+        max-width: 150px;
+        background-color: #333e48;
+        color: #ffffff;
+      }
+      .all-button:hover,
+      .all-button-active:hover {
+        background-color: #0076be;
+        color: #ffffff;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      }
+    </style>
   </head>
   <body>
-    <h2>All Claims</h2>
+    <nav class="navbar navbar-expand-lg nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Platinum Plus</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link nav-tag" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-tag" href="/dashboard">Dashboard</a>
+            </li>
+          </ul>
+
+          <a class="nav-account" href="/account">
+            <i class="fa-solid fa-circle-user fa-xl"></i>
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <h2 class="all-heading">All Claims</h2>
     {% for claim, policy, classic_car in claims_data %}
-    <div>
-      <h2>Claim No: {{claim.claim_number}}</h2>
+    <div class="card all-items-container">
+      <h5>Claim No: {{claim.claim_number}}</h5>
       <p>Policy No: {{policy.policy_number}}</p>
       <p>Make: {{classic_car.vehicle_make}}</p>
       <p>Model: {{classic_car.model}}</p>
-      <a href="/all-claims/{{claim.claim_number}}">View more</a>
+      <a class="btn all-button" href="/all-claims/{{claim.claim_number}}"
+        >View more</a
+      >
     </div>
     {% endfor %}
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
