--- a/templates/new-classic-cars-quote.html
+++ b/templates/new-classic-cars-quote.html
@@ -4,19 +4,148 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
+    <style>
+      .nav-tag {
+        color: #ffffff;
+      }
+      .nav-tag:hover {
+        color: #111820;
+      }
+
+      .nav {
+        background-color: #0076be;
+      }
+      .nav-account {
+        color: #ffffff;
+        width: 20px;
+      }
+      .nav-account:hover {
+        color: #111820;
+      }
+
+      .all-heading {
+        margin-left: 15px;
+        margin-top: 20px;
+      }
+      .form-input-items {
+        max-width: 1000px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+      }
+      .form-container {
+        margin: 20px;
+      }
+      .form-button {
+        margin: 10px;
+        background-color: #333e48;
+        color: #ffffff;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+      }
+      .form-button:hover {
+        background-color: #0076be;
+        color: #ffffff;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      }
+    </style>
   </head>
   <body>
-    <h1>Quote</h1>
-    <form action="" method="POST">
-      {{ form.hidden_tag() }} {{form.vehicle_make.label}}
-      {{form.vehicle_make()}} {{form.model.label}} {{form.model()}}
-      {{form.year_model.label}} {{form.year_model()}} {{form.vin.label}}
-      {{form.vin()}} {{form.license_plate_number.label}}
-      {{form.license_plate_number()}} {{form.odometer_reading.label}}
-      {{form.odometer_reading()}} {{form.fuel_type.label}} {{form.fuel_type()}}
-      {{form.color.label}} {{form.color()}} {{form.current_value.label}}
-      {{form.current_value()}} {{form.year_purchased.label}}
-      {{form.year_purchased()}} {{form.new_item()}}
+    <nav class="navbar navbar-expand-lg nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Platinum Plus</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link nav-tag" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-tag" href="/dashboard">Dashboard</a>
+            </li>
+          </ul>
+
+          <a class="nav-account" href="/account">
+            <i class="fa-solid fa-circle-user fa-xl"></i>
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <h1 class="all-heading">Quote</h1>
+    <form class="card form-container" action="" method="POST">
+      {{ form.hidden_tag() }}
+      <div class="form-input-items">
+        <div class="form-group">
+          {{form.vehicle_make.label}}<br />
+          {{form.vehicle_make()}}
+        </div>
+        <div class="form-group">
+          {{form.model.label}} <br />{{form.model()}}
+        </div>
+        <div class="form-group">
+          {{form.year_model.label}} <br />
+          {{form.year_model()}}
+        </div>
+        <div class="form-group">{{form.vin.label}} <br />{{form.vin()}}</div>
+        <div class="form-group">
+          {{form.license_plate_number.label}} <br />
+          {{form.license_plate_number()}}
+        </div>
+        <div class="form-group">
+          {{form.odometer_reading.label}} <br />
+          {{form.odometer_reading()}}
+        </div>
+        <div class="form-group">
+          {{form.fuel_type.label}} <br />
+          {{form.fuel_type()}}
+        </div>
+        <div class="form-group">
+          {{form.color.label}} <br />
+          {{form.color()}}
+        </div>
+        <div class="form-group">
+          {{form.current_value.label}} <br />
+          {{form.current_value()}}
+        </div>
+        <div class="form-group">
+          {{form.year_purchased.label}} <br />
+          {{form.year_purchased()}}
+        </div>
+      </div>
+      {{form.new_item(class='btn form-button')}}
     </form>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
